--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,6 @@
-/*Use this for custom stuff*/
+/*Custom CSS*/
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-color: red;
+color: black;
 }
 
-
-.testImg {
-	background: url(http://placehold.it/3000x1000) 0 0 no-repeat;
-	height: 1000px;
-}
