--- a/css/custom.css
+++ b/css/custom.css
@@ -4,3 +4,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 color: black;
 }
 
+.jumbotron {
+  background-color: black;
+  color: white;
+}
