--- a/css/custom.css
+++ b/css/custom.css
@@ -5,12 +5,12 @@ color: black;
 }
 
 .jumbotron {
-  background-color: #fff;
+  background-color: #000;
   color: white;
 }
 
 .nav nav-tabs {
-  background-color: #eee;
+  background-color: #111;
   color: white;
 }
 
