--- a/css/custom.css
+++ b/css/custom.css
@@ -12,8 +12,8 @@ color: black;
 .nav {
   background-color: #111;
   color: white;
-  padding-right: 5%;
-  padding-left: 5%;
+  padding-right: 5px;
+  padding-left: 5px;
   border-bottom: none;
 }
 
