--- a/css/custom.css
+++ b/css/custom.css
@@ -9,6 +9,7 @@ color: black;
   color: white;
 }
 
+/*Navbar
 .navbar, .nav {
   background-color: #111;
   color: white;
@@ -18,3 +19,4 @@ color: black;
   border-top: none;
 }
 
+*/
