--- a/css/custom.css
+++ b/css/custom.css
@@ -17,3 +17,8 @@ color: black;
   border-bottom: none;
   border-top: none;
 }
+
+body {
+  background-color: #222;
+  font-family: Oswald, "Courier New", serif;
+}
