--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,7 @@
 /*Custom CSS*/
 
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-color: black;
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, .p {
+color: #eee;
 }
 
 .jumbotron {
