--- a/css/custom.css
+++ b/css/custom.css
@@ -5,7 +5,7 @@ color: #eee;
 }
 
 .jumbotron {
-  background-color: #111;
+  background-color: #orange;
   color: white;
 }
 
@@ -27,4 +27,5 @@ body {
   margin-left: 10%;
   margin-right: 10%;
   margin-bottom: 5%;
+  border-bottom: none;
 }
