--- a/css/custom.css
+++ b/css/custom.css
@@ -10,7 +10,7 @@ color: #eee;
 }
 
 .navbar, .nav {
-  background-color: #111;
+  background-color: #ff5000;
   color: white;
   padding-right: 5px;
   padding-left: 5px;
