--- a/css/custom.css
+++ b/css/custom.css
@@ -29,3 +29,15 @@ body {
   margin-bottom: 5%;
   border-bottom: none;
 }
+
+a:link {
+  color: #000;
+}
+
+a:visited {
+  color: #FF5000
+}
+
+a:hover {
+  color: #FF1000
+}
