--- a/css/custom.css
+++ b/css/custom.css
@@ -10,7 +10,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small
 
 .jumbotron {
   background-color: #ff5000;
-  color: white;
+  color: #eee;
 }
 
 .navbar, .nav {
